--- a/.github/actions/build.yml
+++ b/.github/actions/build.yml
@@ -34,6 +34,8 @@ jobs:
           npm install
           ./build.sh
           chmod +x --recursive out
+      - name: Cleanup node_modules
+        run: rm -rf node_modules
       - name: Create Indexes
         run: out/index-linux
       - name: Upload artifact
