--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "@3xpo/create-index": "^1.1.1"
   },
   "bin": "index.js",
+  "pkg": {
+    "assets": [
+      "node_modules/**/*"
+    ]
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   }
