--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Expo",
   "license": "MIT",
   "dependencies": {
-    "@3xpo/create-index": "^1.3.2"
+    "@3xpo/create-index": "latest"
   },
   "bin": "index.js",
   "pkg": {
