--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Remove .github
-        run: rm -rf .github
+      - name: Move .github
+        run: mv .github _github
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Setup Node
