--- a/indexoverwrite.json5
+++ b/indexoverwrite.json5
@@ -2,8 +2,8 @@
   "repository/": "https://github.com/Exponential-Workload/create-index-bin",
   ".github/": "_github/",
   "out/": "out/",
-  "LICENSE": "LICENSE",
-  "README": "README",
+  LICENSE: "LICENSE",
+  README: "README",
   "package.json": "package.json",
   "pnpm-lock.yaml": "pnpm-lock.yaml",
   "build.sh": "build.sh",
