--- a/indexoverwrite.json5
+++ b/indexoverwrite.json5
@@ -2,11 +2,11 @@
   "repository/": "https://github.com/Exponential-Workload/create-index-bin",
   ".github/": "_github/",
   "out/": "out/",
-  LICENSE: "LICENSE",
-  README: "README",
-  "package.json": "package.json",
   "pnpm-lock.yaml": "pnpm-lock.yaml",
+  "package.json": "package.json",
+  "banner.png": "banner.png",
   "build.sh": "build.sh",
   "index.js": "index.js",
-  "banner.png": "banner.png",
+  "LICENSE": "LICENSE",
+  "README": "README",
 }
