--- a/indexoverwrite.json5
+++ b/indexoverwrite.json5
@@ -1,12 +1,12 @@
 {
-  "repository/": "https://github.com/Exponential-Workload/create-index-bin",
-  ".github/": "_github/",
-  "out/": "out/",
-  "pnpm-lock.yaml": "pnpm-lock.yaml",
-  "package.json": "package.json",
-  "banner.png": "banner.png",
-  "build.sh": "build.sh",
-  "index.js": "index.js",
-  "LICENSE": "LICENSE",
-  "README": "README",
+  'repository/': 'https://github.com/Exponential-Workload/create-index-bin',
+  '.github/': '_github/',
+  'out/': 'out/',
+  'pnpm-lock.yaml': 'pnpm-lock.yaml',
+  'package.json': 'package.json',
+  'banner.png': 'banner.png',
+  'build.sh': 'build.sh',
+  'index.js': 'index.js',
+  LICENSE: 'LICENSE',
+  README: 'README',
 }
